# felion_gui_v4

./: .env  .eslintignore  .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: app_builder.yml  release.yml
public/assets/css/: global.css
scripts/: felionpy-build.ts  gh-release.ts
src/: App.scss.js  App.scss.ts  App.svelte  auto-imports.d.ts  global.d.ts  main.ts  sveltewritables.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CHANGELOG.md
src-tauri/resources/python_files/felionlib/normline/: exp_gauss_fit.py
src-tauri/src/: download.rs  main.rs
src/Pages/: Home.svelte  Kinetics.svelte  Masspec.svelte  Misc.svelte  Normline.svelte  Powerfile.svelte  Settings.svelte  THz.svelte  Test.svelte  Timescan.svelte
src/Pages/configs/: Components.svelte
src/Pages/masspec/: MasspecEchart.svelte  mass.ts
src/Pages/misc/: Configs.svelte  EnergyConversion.svelte  NumberDensity.svelte
src/components/: BrowseTextfield.svelte  ButtonBadge.svelte  Checkbox.svelte  IconButton.svelte  Loading.svelte  OutputBox.svelte  Panel.svelte  SegBtn.svelte  Select.svelte  TextAndSelectOptsToggler.svelte  TextSwitch.svelte  index.ts
src/js/: functions.ts  get_files_settings_values.ts  plot.ts  utils.ts
src/lib/: Editor.svelte  GetLabviewSettings.svelte  OutputBox.svelte  event_listeneres.ts
src/misc/: index.ts
src/scss/: materialTheme.scss  smui-theme-variables.scss  styles.scss
src/types/: global.d.ts
types/: global.d.ts
(+119 files in other folders)
