[package]
name = "felion_gui"
version = "4.8.1"
description = "FELion spectrum analyser for FELIX data"
authors = ["A.N. Marimuthu"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2.3", features = ["dialog-all", "fs-all", "os-all", "path-all", "process-relaunch", "shell-all", "updater", "window-close"] }
portpicker = "0.1.1"
tauri-plugin-window-state = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
error-chain = "0.12.4"
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # "s" and "z" can sometimes be smaller than the other, so test it with your application!
strip = true # Remove debug symbols
